# hana-adapter

./: CMakeLists.txt  README.md  description.json
.metaconfigure/: description.json
metaconfigure/: description.json  description.py
src/include/boost/hana/: traits.hpp
src/test/pair/: empty_storage.cpp
src/test/type/: traits.cpp
