cmake_minimum_required( VERSION 3.2 ) 

project( hana-adapter LANGUAGES CXX )
get_directory_property( is_subproject PARENT_DIRECTORY )
include( CMakeDependentOption REQUIRED )

if ( NOT GIT_EXECUTABLE )
    find_package( Git )
    if ( NOT GIT_FOUND )
        message( FATAL_ERROR "git installation was not found." )
    endif()
endif()

execute_process(
    COMMAND ${GIT_EXECUTABLE} rev-parse --abbrev-ref HEAD
    WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
    OUTPUT_VARIABLE GIT_BRANCH
    OUTPUT_STRIP_TRAILING_WHITESPACE
)
execute_process(
    COMMAND ${GIT_EXECUTABLE} rev-parse HEAD
    WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
    OUTPUT_VARIABLE GIT_HASH
    OUTPUT_STRIP_TRAILING_WHITESPACE
) 

message( STATUS "" )
message( STATUS "-----------------------------------------------------------" )
message( STATUS "" )
message( STATUS "hana-adapter" )
message( STATUS "Git current branch: ${GIT_BRANCH}" )
message( STATUS "Git commit hash: ${GIT_HASH}" )
message( STATUS "" )
message( STATUS "-----------------------------------------------------------" )

add_library( hana-adapter INTERFACE )
target_sources( hana-adapter INTERFACE
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/accessors.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/adapt_adt.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/adapt_struct.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/adjust.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/adjust_if.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/all.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/all_of.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/and.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/any.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/any_of.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/ap.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/append.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/assert.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/at.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/at_key.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/back.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/basic_tuple.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/bool.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/cartesian_product.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/chain.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/comparing.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/concat.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/concept.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/config.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/contains.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/core.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/count.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/count_if.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/cycle.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/define_struct.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/difference.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/div.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/drop_back.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/drop_front.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/drop_front_exactly.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/drop_while.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/duplicate.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/empty.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/equal.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/erase_key.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/eval.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/eval_if.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/extend.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/extract.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fill.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/filter.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/find.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/find_if.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/first.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/flatten.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fold.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fold_left.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fold_right.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/for_each.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/front.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/functional.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fuse.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/greater.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/greater_equal.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/group.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/hash.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/if.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/insert.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/insert_range.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/integral_constant.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/intersection.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/intersperse.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/is_disjoint.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/is_empty.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/is_subset.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/keys.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/lazy.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/length.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/less.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/less_equal.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/lexicographical_compare.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/lift.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/map.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/max.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/maximum.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/members.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/min.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/minimum.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/minus.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/mod.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/monadic_compose.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/monadic_fold_left.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/monadic_fold_right.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/mult.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/negate.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/none.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/none_of.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/not.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/not_equal.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/one.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/optional.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/or.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/ordering.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/pair.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/partition.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/permutations.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/plus.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/power.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/prefix.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/prepend.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/product.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/range.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/remove.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/remove_at.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/remove_if.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/remove_range.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/repeat.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/replace.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/replace_if.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/replicate.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/reverse.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/reverse_fold.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/scan_left.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/scan_right.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/second.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/set.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/size.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/slice.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/sort.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/span.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/string.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/suffix.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/sum.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/symmetric_difference.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/take_back.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/take_front.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/take_while.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/tap.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/then.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/traits.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/transform.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/tuple.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/type.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/unfold_left.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/unfold_right.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/union.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/unique.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/unpack.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/value.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/version.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/while.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/zero.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/zip.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/zip_shortest.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/zip_shortest_with.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/zip_with.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/concept/applicative.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/concept/comonad.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/concept/comparable.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/concept/constant.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/concept/euclidean_ring.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/concept/foldable.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/concept/functor.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/concept/group.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/concept/hashable.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/concept/integral_constant.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/concept/iterable.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/concept/logical.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/concept/metafunction.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/concept/monad.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/concept/monad_plus.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/concept/monoid.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/concept/orderable.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/concept/product.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/concept/ring.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/concept/searchable.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/concept/sequence.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/concept/struct.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/core/common.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/core/default.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/core/dispatch.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/core/is_a.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/core/make.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/core/tag_of.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/core/to.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/core/when.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/detail/algorithm.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/detail/any_of.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/detail/array.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/detail/canonical_constant.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/detail/concepts.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/detail/create.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/detail/decay.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/detail/dispatch_if.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/detail/ebo.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/detail/fast_and.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/detail/first_unsatisfied_index.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/detail/has_common_embedding.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/detail/has_duplicates.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/detail/hash_table.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/detail/index_if.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/detail/integral_constant.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/detail/intrinsics.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/detail/nested_by.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/detail/nested_by_fwd.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/detail/nested_than.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/detail/nested_than_fwd.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/detail/nested_to.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/detail/nested_to_fwd.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/detail/preprocessor.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/detail/std_common_type.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/detail/struct_macros.erb.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/detail/struct_macros.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/detail/type_at.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/detail/type_foldl1.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/detail/type_foldr1.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/detail/unpack_flatten.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/detail/void_t.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/detail/wrong.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/detail/operators/adl.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/detail/operators/arithmetic.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/detail/operators/comparable.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/detail/operators/iterable.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/detail/operators/logical.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/detail/operators/monad.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/detail/operators/orderable.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/detail/operators/searchable.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/detail/variadic/at.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/detail/variadic/drop_into.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/detail/variadic/foldl1.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/detail/variadic/foldr1.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/detail/variadic/reverse_apply.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/detail/variadic/split_at.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/detail/variadic/take.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/detail/variadic/reverse_apply/flat.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/detail/variadic/reverse_apply/unrolled.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/experimental/printable.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/experimental/type_name.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/experimental/types.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/experimental/view.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/ext/boost.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/ext/std.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/ext/boost/fusion.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/ext/boost/mpl.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/ext/boost/tuple.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/ext/boost/fusion/deque.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/ext/boost/fusion/list.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/ext/boost/fusion/tuple.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/ext/boost/fusion/vector.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/ext/boost/fusion/detail/common.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/ext/boost/mpl/integral_c.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/ext/boost/mpl/list.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/ext/boost/mpl/vector.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/ext/std/array.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/ext/std/integer_sequence.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/ext/std/integral_constant.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/ext/std/pair.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/ext/std/ratio.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/ext/std/tuple.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/ext/std/vector.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/functional/always.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/functional/apply.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/functional/arg.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/functional/capture.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/functional/compose.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/functional/curry.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/functional/demux.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/functional/fix.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/functional/flip.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/functional/id.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/functional/infix.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/functional/iterate.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/functional/lockstep.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/functional/on.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/functional/overload.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/functional/overload_linearly.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/functional/partial.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/functional/placeholder.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/functional/reverse_partial.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/accessors.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/adapt_adt.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/adapt_struct.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/adjust.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/adjust_if.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/all.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/all_of.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/and.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/any.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/any_of.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/ap.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/append.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/at.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/at_key.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/back.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/basic_tuple.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/bool.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/cartesian_product.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/chain.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/comparing.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/concat.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/contains.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/core.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/count.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/count_if.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/cycle.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/define_struct.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/difference.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/div.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/drop_back.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/drop_front.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/drop_front_exactly.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/drop_while.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/duplicate.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/empty.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/equal.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/erase_key.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/eval.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/eval_if.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/extend.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/extract.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/fill.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/filter.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/find.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/find_if.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/first.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/flatten.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/fold.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/fold_left.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/fold_right.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/for_each.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/front.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/fuse.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/greater.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/greater_equal.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/group.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/hash.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/if.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/insert.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/insert_range.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/integral_constant.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/intersection.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/intersperse.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/is_disjoint.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/is_empty.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/is_subset.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/keys.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/lazy.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/length.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/less.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/less_equal.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/lexicographical_compare.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/lift.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/map.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/max.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/maximum.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/members.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/min.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/minimum.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/minus.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/mod.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/monadic_compose.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/monadic_fold_left.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/monadic_fold_right.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/mult.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/negate.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/none.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/none_of.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/not.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/not_equal.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/one.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/optional.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/or.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/ordering.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/pair.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/partition.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/permutations.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/plus.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/power.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/prefix.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/prepend.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/product.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/range.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/remove.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/remove_at.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/remove_if.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/remove_range.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/repeat.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/replace.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/replace_if.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/replicate.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/reverse.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/reverse_fold.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/scan_left.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/scan_right.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/second.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/set.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/size.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/slice.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/sort.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/span.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/string.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/suffix.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/sum.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/symmetric_difference.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/take_back.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/take_front.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/take_while.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/tap.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/then.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/transform.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/tuple.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/type.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/unfold_left.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/unfold_right.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/union.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/unique.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/unpack.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/value.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/while.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/zero.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/zip.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/zip_shortest.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/zip_shortest_with.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/zip_with.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/concept/applicative.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/concept/comonad.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/concept/comparable.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/concept/constant.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/concept/euclidean_ring.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/concept/foldable.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/concept/functor.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/concept/group.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/concept/hashable.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/concept/integral_constant.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/concept/iterable.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/concept/logical.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/concept/metafunction.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/concept/monad.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/concept/monad_plus.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/concept/monoid.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/concept/orderable.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/concept/product.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/concept/ring.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/concept/searchable.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/concept/sequence.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/concept/struct.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/core/common.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/core/default.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/core/is_a.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/core/make.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/core/tag_of.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/core/to.hpp"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/include/boost/hana/fwd/core/when.hpp" )
              
target_include_directories( hana-adapter INTERFACE src/include )
